syntax = "proto3";

package locale;

option go_package = "github.com/canonical/ubuntu-desktop-provision/provd/proto";

import "google/protobuf/empty.proto";


service LocaleService {
  rpc SetLocale (SetLocaleRequest) returns (google.protobuf.Empty) {};
  rpc GetLocale (google.protobuf.Empty) returns (GetLocaleResponse) {};
}

message SetLocaleRequest {
  string locale = 1;
}

message GetLocaleResponse {
  string locale = 1;
}
